kubernetes/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-cicd-demo-canary
  labels:
    app: spring-boot-cicd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-cicd-demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: spring-boot-cicd-demo
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: spring-boot-cicd-demo
        image: registry.cloudzcp.io/edu1/spring-boot-cicd-demo:prod
        ports:
        - containerPort: 8080
          name: tomcat
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 256Mi
