kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-cicd-demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-cicd-demo
